--- a/yadisk-client/mainwindow.ui
+++ b/yadisk-client/mainwindow.ui
@@ -24,22 +24,8 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="FoldersLayout">
-     <item row="0" column="1">
-      <widget class="QScrollArea" name="foldersScrollArea">
-       <property name="widgetResizable">
-        <bool>true</bool>
-       </property>
-       <widget class="QWidget" name="scrollAreaWidgetContents">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>967</width>
-          <height>537</height>
-         </rect>
-        </property>
-       </widget>
-      </widget>
+     <item row="0" column="0">
+      <widget class="QListWidget" name="foldersListWidget"/>
      </item>
     </layout>
    </widget>
@@ -139,6 +125,41 @@
       <width>441</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Поиск по всему диску</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="addNew">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>110</y>
+      <width>671</width>
+      <height>251</height>
+     </rect>
+    </property>
+    <property name="dragEnabled">
+     <bool>true</bool>
+    </property>
+    <property name="placeholderText">
+     <string>Введите название файла</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="endEdit">
+    <property name="geometry">
+     <rect>
+      <x>979</x>
+      <y>220</y>
+      <width>211</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Завершить редактирование</string>
     </property>
    </widget>
   </widget>
